tests/error/misc_errors/state_result_empty.err
Error: Missing qubit inputs (at $FILE:10:4)
   | 
 8 | @guppy(module)
 9 | def main() -> None:
10 |     state_result("tag")
   |     ^^^^^^^^^^^^^^^^^^^ Qubits whose state should be reported must be passed
   |                         explicitly

Guppy compilation failed due to 1 previous error
